MAGNOLIA-2929 introducing a wrapper/helper for unicode normalization
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@29241 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-core/pom.xml
+++ b/magnolia-core/pom.xml
@@ -56,6 +56,11 @@
       <classifier>asl</classifier>
     </dependency>
     <dependency>
+      <groupId>com.ibm.icu</groupId>
+      <artifactId>icu4j</artifactId>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
     </dependency>
