--- a/pom.xml
+++ b/pom.xml
@@ -396,6 +396,11 @@ for Java Content Repositories (JCR).
         <classifier>asl</classifier>
       </dependency>
       <dependency>
+        <groupId>com.ibm.icu</groupId>
+        <artifactId>icu4j</artifactId>
+        <version>4.0.1</version>
+      </dependency>
+      <dependency>
         <groupId>net.sourceforge.openutils</groupId>
         <artifactId>openutils-log4j</artifactId>
         <version>2.0.4</version>
