MAGNOLIA-2929 Added default implementation for UnicodeNormalizer$Normalizer in mgnl-beans.properties
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@29242 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-core/src/main/resources/mgnl-beans.properties
+++ b/magnolia-core/src/main/resources/mgnl-beans.properties
@@ -42,3 +42,5 @@ info.magnolia.voting.Voter = info.magnolia.voting.voters.VoterSet
 info.magnolia.logging.AuditLoggingManager=/server/auditLogging
 info.magnolia.module.form.processing.FormProcessing=info.magnolia.module.form.processing.DefaultProcessing
 info.magnolia.cms.i18n.MessagesManager=info.magnolia.cms.i18n.DefaultMessagesManager
+
+info.magnolia.cms.util.UnicodeNormalizer$Normalizer=info.magnolia.cms.util.UnicodeNormalizer$AutoDetectNormalizer
