MAGNOLIA-3001 MAGNOLIA-2927 : Reviewed generics usage for info.magnolia.objectfactory.* and hopefully made it more useful MAGNOLIA-2553 : ObservedComponentFactory is now an an actual ComponentFactory (InstanceFactory), which returns a proxy of the observed objects - applied adapted patch
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@30836 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-core/src/main/resources/mgnl-beans.properties
+++ b/magnolia-core/src/main/resources/mgnl-beans.properties
@@ -9,9 +9,9 @@ info.magnolia.module.ModuleRegistry=info.magnolia.module.ModuleRegistryImpl
 
 info.magnolia.module.mail.handlers.MgnlMailHandler=info.magnolia.module.mail.handlers.SimpleMailHandler
 
-info.magnolia.cms.beans.config.ServerConfiguration=info.magnolia.cms.beans.config.ServerConfiguration$Observer
+info.magnolia.cms.beans.config.ServerConfiguration=info.magnolia.cms.beans.config.ServerConfiguration$InstanceFactory
 info.magnolia.cms.security.SecuritySupport=/server/security
-info.magnolia.cms.security.IPSecurityManager=info.magnolia.cms.security.IPSecurityManagerImpl$Observer
+info.magnolia.cms.security.IPSecurityManager=info.magnolia.cms.security.IPSecurityManagerImpl$InstanceFactory
 
 info.magnolia.cms.filters.MgnlFilter=info.magnolia.cms.filters.CompositeFilter
 
