--- a/magnolia-core/pom.xml
+++ b/magnolia-core/pom.xml
@@ -56,7 +56,8 @@
     </dependency>
     <dependency>
       <groupId>cglib</groupId>
-      <artifactId>cglib-full</artifactId>
+      <!-- cglib-nodep is the one that includes a repackaged asm -->
+      <artifactId>cglib-nodep</artifactId>
     </dependency>
     <dependency>
       <groupId>org.safehaus.jug</groupId>
