MAGNOLIA-3021 use factory to create new instance of AggregationState
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@30930 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-core/src/main/resources/mgnl-beans.properties
+++ b/magnolia-core/src/main/resources/mgnl-beans.properties
@@ -3,6 +3,7 @@
 # Modules define their own in their module descriptors.
 #--------------------------------------------
 info.magnolia.context.WebContext=info.magnolia.context.WebContextImpl
+info.magnolia.cms.core.AggregationState=info.magnolia.cms.core.AggregationState
 info.magnolia.context.SystemContext=info.magnolia.context.JCRSessionPerThreadSystemContext
 info.magnolia.module.ModuleManager=info.magnolia.module.ModuleManagerImpl
 info.magnolia.module.ModuleRegistry=info.magnolia.module.ModuleRegistryImpl
