added a "destdir" parameter to xdoclet, this helps the creation of a valid classpath with eclipse:eclipse
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@31385 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/pom.xml
+++ b/pom.xml
@@ -189,6 +189,13 @@ for Java Content Repositories (JCR).
                           <uri>${taglib.uri}</uri>
                           <displayname>${project.name}</displayname>
                           <description>${project.description}</description>
+                          <!--
+                              looks like that specifying a destdir different from the default here helps
+                              avoiding a duplicate generation of taglibs and creating a valid classpath for
+                              eclipse (without this the eclipse plugin adds a "generated-resources" dir nested
+                              into /target/classes/
+                           -->
+                          <destdir>${project.build.directory}/generated-resources/taglibs</destdir>
                         </params>
                       </component>
                     </components>
