MAGNOLIA-3001 replaced all leftover usages of FactoryUtil by ComponentsTestUtil in tests
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@31425 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-gui/pom.xml
+++ b/magnolia-gui/pom.xml
@@ -66,5 +66,12 @@
       <artifactId>junit</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>info.magnolia</groupId>
+      <artifactId>magnolia-core</artifactId>
+      <version>4.3-SNAPSHOT</version>
+      <type>test-jar</type>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
