--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,30 @@ for Java Content Repositories (JCR).
     </profile>
   </profiles>
   <build>
+    <resources>
+      <resource>
+        <filtering>false</filtering>
+        <directory>src/main/resources</directory>
+        <includes>
+          <include>**/*</include>
+        </includes>
+      </resource>
+      <resource>
+        <filtering>true</filtering>
+        <directory>src/main/resources</directory>
+        <includes>
+          <include>META-INF/magnolia/*</include>
+          <include>**/license.xml</include>
+        </includes>
+      </resource>
+      <resource>
+        <filtering>false</filtering>
+        <directory>${project.build.directory}/generated-resources/taglibs</directory>
+        <includes>
+          <include>**/*</include>
+        </includes>
+      </resource>
+    </resources>
     <plugins>
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
@@ -189,6 +213,7 @@ for Java Content Repositories (JCR).
                           <uri>${taglib.uri}</uri>
                           <displayname>${project.name}</displayname>
                           <description>${project.description}</description>
+                          <destdir>${project.build.directory}/generated-resources/taglibs</destdir>
                         </params>
                       </component>
                     </components>
