MAGNOLIA-2993 finally a first commit ! (work in progress)
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@31887 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-empty-webapp/pom.xml
+++ b/magnolia-empty-webapp/pom.xml
@@ -51,6 +51,11 @@
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
+      <artifactId>magnolia-authoring-ui</artifactId>
+      <version>4.3-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>info.magnolia</groupId>
       <artifactId>magnolia-taglib-utility</artifactId>
       <version>4.3-SNAPSHOT</version>
     </dependency>
