--- a/pom.xml
+++ b/pom.xml
@@ -644,6 +644,7 @@ for Java Content Repositories (JCR).
     <module>magnolia-module-templating</module>
     <module>magnolia-module-workflow</module>
     <module>magnolia-module-cache</module>
+    <module>magnolia-authoring-ui</module>
     <module>magnolia-taglib-cms</module>
     <module>magnolia-taglib-utility</module>
     <module>magnolia-module-fckeditor</module>
