--- a/magnolia-module-templating/pom.xml
+++ b/magnolia-module-templating/pom.xml
@@ -21,6 +21,11 @@
       <version>4.3-SNAPSHOT</version>
     </dependency>
     <dependency>
+      <groupId>info.magnolia</groupId>
+      <artifactId>magnolia-authoring-ui</artifactId>
+      <version>4.3-SNAPSHOT</version>
+    </dependency>
+    <dependency>
       <groupId>net.sf.json-lib</groupId>
       <artifactId>json-lib</artifactId>
       <!-- <classifier>jdk13</classifier>-->
