MAGNOLIA-3083 module "modulestore" first commit
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@31894 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/pom.xml
+++ b/pom.xml
@@ -648,6 +648,7 @@ for Java Content Repositories (JCR).
     <module>magnolia-taglib-cms</module>
     <module>magnolia-taglib-utility</module>
     <module>magnolia-module-fckeditor</module>
+    <module>magnolia-module-modulestore</module>
     <module>magnolia-module-samples</module>
     <module>magnolia-empty-webapp</module>
   </modules>
