MAGNOLIA-2993 renamed magnolia-authoring-ui to magnolia-templating-ui-components
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@31920 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-templating/pom.xml
+++ b/magnolia-module-templating/pom.xml
@@ -22,7 +22,7 @@
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
-      <artifactId>magnolia-authoring-ui</artifactId>
+      <artifactId>magnolia-templating-ui-components</artifactId>
       <version>4.3-SNAPSHOT</version>
     </dependency>
     <dependency>
