--- a/magnolia-templating-ui-components/pom.xml
+++ b/magnolia-templating-ui-components/pom.xml
@@ -8,8 +8,8 @@
     <version>4.3-SNAPSHOT</version>
   </parent>
   <groupId>info.magnolia</groupId>
-  <artifactId>magnolia-authoring-ui</artifactId>
-  <name>magnolia-authoring-ui</name>
+  <artifactId>magnolia-templating-ui-components</artifactId>
+  <name>magnolia-templating-ui-components</name>
 
   <properties>
     <taglib.shortname>ui</taglib.shortname>
