--- a/magnolia-module-templating/pom.xml
+++ b/magnolia-module-templating/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>magnolia-project</artifactId>
     <groupId>info.magnolia</groupId>
-    <version>4.3-m2</version>
+    <version>4.3-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -13,17 +13,17 @@
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-core</artifactId>
-      <version>4.3-m2</version>
+      <version>4.3-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-gui</artifactId>
-      <version>4.3-m2</version>
+      <version>4.3-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-templating-ui-components</artifactId>
-      <version>4.3-m2</version>
+      <version>4.3-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>net.sf.json-lib</groupId>
@@ -74,7 +74,7 @@
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-core</artifactId>
-      <version>4.3-m2</version>
+      <version>4.3-SNAPSHOT</version>
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
