--- a/magnolia-templating-ui-components/pom.xml
+++ b/magnolia-templating-ui-components/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>magnolia-project</artifactId>
     <groupId>info.magnolia</groupId>
-    <version>4.3-m2</version>
+    <version>4.3-SNAPSHOT</version>
   </parent>
   <groupId>info.magnolia</groupId>
   <artifactId>magnolia-templating-ui-components</artifactId>
@@ -37,12 +37,12 @@
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-core</artifactId>
-      <version>4.3-m2</version>
+      <version>4.3-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-gui</artifactId>
-      <version>4.3-m2</version>
+      <version>4.3-SNAPSHOT</version>
     </dependency>
     <!--<dependency>-->
       <!--<groupId>info.magnolia</groupId>-->
@@ -72,7 +72,7 @@
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-core</artifactId>
       <type>test-jar</type>
-      <version>4.3-m2</version>
+      <version>4.3-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
     <dependency>
