--- a/magnolia-templating-ui-components/pom.xml
+++ b/magnolia-templating-ui-components/pom.xml
@@ -118,5 +118,15 @@
       </exclusions>
     </dependency>
   </dependencies>
-
+  <reporting>
+    <plugins>
+      <plugin>
+        <groupId>net.sourceforge.maven-taglib</groupId>
+        <artifactId>maven-taglib-plugin</artifactId>
+        <configuration>
+          <srcDir>${project.build.directory}/classes/META-INF/</srcDir>
+        </configuration>
+      </plugin>
+    </plugins>
+  </reporting>
 </project>
