MAGNOLIA-3095 Make info.magnolia.cms.core.search.SearchFactory implementation configurable (also made some fields/methods protected from private in Query* classes for easier subclassing)
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@32123 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-core/src/main/resources/mgnl-beans.properties
+++ b/magnolia-core/src/main/resources/mgnl-beans.properties
@@ -45,3 +45,5 @@ info.magnolia.module.form.processing.FormProcessing=info.magnolia.module.form.pr
 info.magnolia.cms.i18n.MessagesManager=info.magnolia.cms.i18n.DefaultMessagesManager
 
 info.magnolia.cms.util.UnicodeNormalizer$Normalizer=info.magnolia.cms.util.UnicodeNormalizer$AutoDetectNormalizer
+
+info.magnolia.cms.core.search.SearchFactory=info.magnolia.cms.core.search.DefaultSearchFactory
