MAGNOLIA-2993 work-in-progress; extracted factory methods for components and various cleanup
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@32185 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-templating-ui-components/pom.xml
+++ b/magnolia-templating-ui-components/pom.xml
@@ -12,7 +12,7 @@
 
   <properties>
     <taglib.shortname>ui</taglib.shortname>
-    <taglib.uri>http://magnolia-cms.com/taglib/authoringui</taglib.uri>
+    <taglib.uri>http://magnolia-cms.com/taglib/templating-ui-components</taglib.uri>
   </properties>
   <build>
     <plugins>
