MAGNOLIA-2993 cleanup and javadoc; also added support for TemplateCollectionModel where directive parameters are converted in List<String>
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@32285 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-templating-ui-components/pom.xml
+++ b/magnolia-templating-ui-components/pom.xml
@@ -44,11 +44,12 @@
       <artifactId>magnolia-gui</artifactId>
       <version>4.3-SNAPSHOT</version>
     </dependency>
-    <!--<dependency>-->
-      <!--<groupId>info.magnolia</groupId>-->
-      <!--<artifactId>magnolia-module-admininterface</artifactId>-->
-      <!--<version>4.3-SNAPSHOT</version>-->
-    <!--</dependency>-->
+    <dependency>
+      <!-- needed for ParagraphSelectDialog -->
+      <groupId>info.magnolia</groupId>
+      <artifactId>magnolia-module-admininterface</artifactId>
+      <version>4.3-SNAPSHOT</version>
+    </dependency>
     <dependency>
       <groupId>org.freemarker</groupId>
       <artifactId>freemarker</artifactId>
