MAGNOLIA-2993 oops; circular dependency
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@32286 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-templating-ui-components/pom.xml
+++ b/magnolia-templating-ui-components/pom.xml
@@ -45,7 +45,7 @@
       <version>4.3-SNAPSHOT</version>
     </dependency>
     <dependency>
-      <!-- needed for ParagraphSelectDialog -->
+      <!-- TODO needed for ParagraphSelectDialog - but currently circular, so see -->
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-module-admininterface</artifactId>
       <version>4.3-SNAPSHOT</version>
