MAGNOLIA-2993 oops; circular dependency...
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@32287 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-templating-ui-components/pom.xml
+++ b/magnolia-templating-ui-components/pom.xml
@@ -44,12 +44,12 @@
       <artifactId>magnolia-gui</artifactId>
       <version>4.3-SNAPSHOT</version>
     </dependency>
-    <dependency>
-      <!-- TODO needed for ParagraphSelectDialog - but currently circular, so see -->
+    <!-- dependency
+      TODO needed for ParagraphSelectDialog - but currently circular, so see note in info.magnolia.templatinguicomponents.components.EditParagraphBar
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-module-admininterface</artifactId>
       <version>4.3-SNAPSHOT</version>
-    </dependency>
+    </dependency-->
     <dependency>
       <groupId>org.freemarker</groupId>
       <artifactId>freemarker</artifactId>
