MAGNOLIA-3009 merge back from branch
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@32450 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-core/src/test/resources/test-magnolia.properties
+++ b/magnolia-core/src/test/resources/test-magnolia.properties
@@ -29,6 +29,9 @@ magnolia.bootstrap.authorInstance=true
 # the sample data
 magnolia.bootstrap.samples=true
 
+# Activate UTF-8 support to pages
+magnolia.utf8.enabled=true
+
 # Switch to false to enahnce the performance of the javascript generation and similar
 magnolia.develop=true
 
