--- a/magnolia-empty-webapp/src/main/webapp/WEB-INF/config/default/magnolia.properties
+++ b/magnolia-empty-webapp/src/main/webapp/WEB-INF/config/default/magnolia.properties
@@ -30,6 +30,9 @@ magnolia.bootstrap.authorInstance=true
 # the sample data
 magnolia.bootstrap.samples=true
 
+# Activate UTF-8 support to pages
+magnolia.utf8.enabled=false
+
 # Switch to false to enhance the performance of the javascript generation and similar
 magnolia.develop=false
 
