--- a/magnolia-module-modulestore/pom.xml
+++ b/magnolia-module-modulestore/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>magnolia-project</artifactId>
     <groupId>info.magnolia</groupId>
-    <version>4.3-m3</version>
+    <version>4.3-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -17,12 +17,12 @@
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-core</artifactId>
-      <version>4.3-m3</version>
+      <version>4.3-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-module-admininterface</artifactId>
-      <version>4.3-m3</version>
+      <version>4.3-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
@@ -47,7 +47,7 @@
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-core</artifactId>
-      <version>4.3-m3</version>
+      <version>4.3-SNAPSHOT</version>
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>    
