MAGNOLIA-2993 * renamed classes, also renamed "main" tag/directive name to "page"
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@32468 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-templating-ui-components/pom.xml
+++ b/magnolia-templating-ui-components/pom.xml
@@ -45,7 +45,7 @@
       <version>4.3-SNAPSHOT</version>
     </dependency>
     <!-- dependency
-      TODO needed for ParagraphSelectDialog - but currently circular, so see note in info.magnolia.templatinguicomponents.components.EditParagraphBar
+      TODO needed for ParagraphSelectDialog - but currently circular, so see note in info.magnolia.templatinguicomponents.components.EditBar
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-module-admininterface</artifactId>
       <version>4.3-SNAPSHOT</version>
