MAGNOLIA-2993 * added module descriptor for templating-components * renamed package from info.magnolia.templatinguicomponents to info.magnolia.module.templatingcomponents * inverted dependency between templating-components and templating
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@32471 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-templating-components/pom.xml
+++ b/magnolia-module-templating-components/pom.xml
@@ -46,11 +46,16 @@
       <version>4.3-SNAPSHOT</version>
     </dependency>
     <!-- dependency
-      TODO needed for ParagraphSelectDialog - but currently circular, so see note in info.magnolia.templatinguicomponents.components.EditBar
+      TODO needed for ParagraphSelectDialog - but currently circular, so see note in info.magnolia.module.templatingcomponentsomponents.EditBar
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-module-admininterface</artifactId>
       <version>4.3-SNAPSHOT</version>
     </dependency-->
+    <dependency>
+      <groupId>info.magnolia</groupId>
+      <artifactId>magnolia-module-templating</artifactId>
+      <version>4.3-SNAPSHOT</version>
+    </dependency>
     <dependency>
       <groupId>org.freemarker</groupId>
       <artifactId>freemarker</artifactId>
