MAGNOLIA-2844, MAGNOLIA-3074 Persist uuid-cache key mapping.
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@32517 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/pom.xml
+++ b/pom.xml
@@ -618,6 +618,11 @@ for Java Content Repositories (JCR).
           </exclusion>
         </exclusions>
       </dependency>
+      <dependency>
+        <groupId>com.google.collections</groupId>
+        <artifactId>google-collections</artifactId>
+        <version>1.0-rc1</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
   <distributionManagement>
