--- a/magnolia-module-cache/pom.xml
+++ b/magnolia-module-cache/pom.xml
@@ -48,6 +48,10 @@
       <artifactId>commons-collections</artifactId>
     </dependency>
     <dependency>
+      <groupId>com.google.collections</groupId>
+      <artifactId>google-collections</artifactId>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>test</scope>
@@ -63,6 +67,6 @@
       <version>4.3-SNAPSHOT</version>
       <type>test-jar</type>
       <scope>test</scope>
-    </dependency>    
+    </dependency>
   </dependencies>
 </project>
