--- a/magnolia-module-mail/pom.xml
+++ b/magnolia-module-mail/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <artifactId>magnolia-project</artifactId>
     <groupId>info.magnolia</groupId>
-    <version>4.3-SNAPSHOT</version>
+    <version>4.3-rc1</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -12,12 +12,12 @@
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-core</artifactId>
-      <version>4.3-SNAPSHOT</version>
+      <version>4.3-rc1</version>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-module-admininterface</artifactId>
-      <version>4.3-SNAPSHOT</version>
+      <version>4.3-rc1</version>
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
@@ -95,7 +95,7 @@
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-core</artifactId>
-      <version>4.3-SNAPSHOT</version>
+      <version>4.3-rc1</version>
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
