MAGNOLIA-3163: moved dep
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@33233 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-store-client/pom.xml
+++ b/magnolia-module-store-client/pom.xml
@@ -50,6 +50,10 @@
       <version>4.3.2-SNAPSHOT</version>
       <type>test-jar</type>
       <scope>test</scope>
-    </dependency>    
+    </dependency>
+    <dependency>
+      <groupId>net.sf.json-lib</groupId>
+      <artifactId>json-lib</artifactId>
+    </dependency>
   </dependencies>
 </project>
