--- a/magnolia-module-store-client/pom.xml
+++ b/magnolia-module-store-client/pom.xml
@@ -25,6 +25,10 @@
       <version>4.3.2-SNAPSHOT</version>
     </dependency>
     <dependency>
+       <groupId>net.sf.json-lib</groupId>
+       <artifactId>json-lib</artifactId>
+    </dependency>
+    <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
       <scope>provided</scope>
