Added dependency to magnolia-module-templating-components in the "with-optional-modules" profile
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@34301 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-empty-webapp/pom.xml
+++ b/magnolia-empty-webapp/pom.xml
@@ -30,6 +30,11 @@
           <artifactId>magnolia-module-samples</artifactId>
           <version>${project.version}</version>
         </dependency>
+        <dependency>
+          <groupId>info.magnolia</groupId>
+          <artifactId>magnolia-module-templating-components</artifactId>
+          <version>${project.version}</version>
+        </dependency>
       </dependencies>
     </profile>
   </profiles>
