--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,9 @@ for Java Content Repositories (JCR).
     <magnoliaLicenseStyle>dual</magnoliaLicenseStyle>
     <documentationURL>http://documentation.magnolia-cms.com/release/5-0.html</documentationURL>
     <javaVersion>1.5</javaVersion>
+    <gwtVersion>2.0.3</gwtVersion>
+    <gwtextVersion>2.0.5</gwtextVersion>
+    <resteasyVersion>1.1.GA</resteasyVersion>
   </properties>
   <issueManagement>
     <system>Jira</system>
@@ -244,6 +247,41 @@ for Java Content Repositories (JCR).
   </build>
   <dependencyManagement>
     <dependencies>
+         <dependency>
+            <groupId>com.google.gwt</groupId>
+            <artifactId>gwt-user</artifactId>
+            <version>${gwtVersion}</version>
+         </dependency>
+         <dependency>
+            <groupId>com.gwtext</groupId>
+            <artifactId>gwtext</artifactId>
+            <version>${gwtextVersion}</version>
+         </dependency>
+         <dependency>
+             <groupId>com.extjs</groupId>
+             <artifactId>gxt</artifactId>
+             <version>2.1.1</version>
+         </dependency>
+         <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.1</version>
+         </dependency>
+         <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-jaxrs</artifactId>
+            <version>${resteasyVersion}</version>
+         </dependency>
+         <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-jaxb-provider</artifactId>
+            <version>${resteasyVersion}</version>
+         </dependency>
+         <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>jaxrs-api</artifactId>
+            <version>${resteasyVersion}</version>
+         </dependency>
       <dependency>
         <groupId>org.apache.jackrabbit</groupId>
         <artifactId>jackrabbit-core</artifactId>
@@ -618,6 +656,13 @@ for Java Content Repositories (JCR).
         <enabled>false</enabled>
       </snapshots>
     </repository>
+    <repository>
+      <id>gwtext</id>
+      <url>http://www.gwt-ext.com/maven2</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
   </repositories>
   <modules>
     <module>magnolia-core</module>
@@ -626,6 +671,7 @@ for Java Content Repositories (JCR).
     <module>magnolia-module-exchange-simple</module>
     <module>magnolia-module-fckeditor</module>
     <module>magnolia-module-admininterface</module>
+    <module>magnolia-genuine-central</module>
     <module>magnolia-module-cache</module>
     <module>magnolia-module-templating-components</module>
     <module>magnolia-taglib-cms</module>
