added jboss repo to magnolia-project pom.xml
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@35007 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/pom.xml
+++ b/pom.xml
@@ -673,6 +673,11 @@ for Java Content Repositories (JCR).
         <enabled>false</enabled>
       </snapshots>
     </repository>
+    <repository>
+      <id>jboss</id>
+      <name>jboss repo</name>
+      <url>http://repository.jboss.org/maven2</url>
+    </repository>
   </repositories>
   <modules>
     <module>magnolia-core</module>
