renamed jboss repo
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@35023 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/pom.xml
+++ b/pom.xml
@@ -666,8 +666,7 @@ for Java Content Repositories (JCR).
       </snapshots>
     </repository>
     <repository>
-      <id>jboss-public-repository-group</id>
-      <name>JBoss Public Repository Group</name>
+      <id>jboss-releases-repo</id>
       <url>https://repository.jboss.org/nexus/content/repositories/releases/</url>
       <layout>default</layout>
       <releases>
