--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,6 @@ for Java Content Repositories (JCR).
     <documentationURL>http://documentation.magnolia-cms.com/release/5-0.html</documentationURL>
     <javaVersion>1.5</javaVersion>
     <gwtVersion>2.0.3</gwtVersion>
-    <extGWTVersion>2.1.1</extGWTVersion>
     <resteasyVersion>1.2.1.GA</resteasyVersion>
   </properties>
   <issueManagement>
@@ -255,7 +254,7 @@ for Java Content Repositories (JCR).
       <dependency>
         <groupId>com.extjs</groupId>
         <artifactId>gxt</artifactId>
-        <version>${extGWTVersion}</version>
+        <version>2.1.1</version>
       </dependency>
       <dependency>
         <groupId>javax.xml.bind</groupId>
