Moved gwt plugin version declaration to main project pom. Added compile and generate async goals and deleted previously manually created async classes. Changed packaging of sources to use the plugin goal rather then manually adding resources ourselves.
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@35044 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-empty-webapp/pom.xml
+++ b/magnolia-empty-webapp/pom.xml
@@ -190,7 +190,16 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>gwt-maven-plugin</artifactId>
-        <version>1.2</version>
+        <executions>
+          <execution>
+            <goals>
+              <!-- Let the modules to do their homework and compile themselves -->
+              <!-- we might still need to do the compiling here at some point if there are issues with cross module dependencies -->
+              <!--goal>compile</goal>
+              <goal>generateAsync</goal-->
+            </goals>
+          </execution>
+        </executions>
         <configuration>
           <module>info.magnolia.module.genuinecentral.AdminCentral</module>
           <runTarget>Magnolia.html</runTarget>
