website json endpoint now reads from repository
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@35113 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-genuine-central/pom.xml
+++ b/magnolia-genuine-central/pom.xml
@@ -28,6 +28,12 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
+      <groupId>info.magnolia</groupId>
+      <artifactId>magnolia-module-templating</artifactId>
+      <version>5.0-SNAPSHOT</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>javax.xml.bind</groupId>
       <artifactId>jaxb-api</artifactId>
     </dependency>
