rest endpoints are now managed by an ObservedManager, JsonDispatcherServlet is renamed to RestDispatcherServlet
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@35267 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-empty-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/magnolia-empty-webapp/src/main/webapp/WEB-INF/web.xml
@@ -43,7 +43,7 @@
 	</jsp-config>
 	<servlet>
 		<servlet-name>jsonDispatcherServlet</servlet-name>
-		<servlet-class>info.magnolia.module.genuinecentral.json.JsonDispatcherServlet</servlet-class>
+		<servlet-class>info.magnolia.module.genuinecentral.rest.RestDispatcherServlet</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>jsonDispatcherServlet</servlet-name>
