--- a/magnolia-genuine-central/pom.xml
+++ b/magnolia-genuine-central/pom.xml
@@ -29,6 +29,12 @@
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
+      <artifactId>magnolia-rest</artifactId>
+      <version>5.0-SNAPSHOT</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>info.magnolia</groupId>
       <artifactId>magnolia-module-templating</artifactId>
       <version>5.0-SNAPSHOT</version>
       <scope>provided</scope>
@@ -38,18 +44,6 @@
       <artifactId>magnolia-module-admininterface</artifactId>
       <version>5.0-SNAPSHOT</version>
       <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>javax.xml.bind</groupId>
-      <artifactId>jaxb-api</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.jboss.resteasy</groupId>
-      <artifactId>resteasy-jaxrs</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.jboss.resteasy</groupId>
-      <artifactId>resteasy-jackson-provider</artifactId>
     </dependency>
   </dependencies>
 
@@ -61,7 +55,7 @@
         <executions>
           <execution>
             <goals>
-              <goal>compile</goal>
+              <!--goal>compile</goal-->
               <goal>generateAsync</goal>
               <goal>resources</goal>
             </goals>
