--- a/pom.xml
+++ b/pom.xml
@@ -687,6 +687,7 @@ for Java Content Repositories (JCR).
     <module>magnolia-core</module>
     <module>magnolia-jaas</module>
     <module>magnolia-gui</module>
+    <module>magnolia-rest</module>
     <module>magnolia-module-exchange-simple</module>
     <module>magnolia-module-fckeditor</module>
     <module>magnolia-module-admininterface</module>
