No async interfaces (we ain't using Google-RPC anyway).
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@35307 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-genuine-central/pom.xml
+++ b/magnolia-genuine-central/pom.xml
@@ -56,7 +56,7 @@
           <execution>
             <goals>
               <!--goal>compile</goal-->
-              <goal>generateAsync</goal>
+              <!--goal>generateAsync</goal-->
               <goal>resources</goal>
             </goals>
           </execution>
